<resources>
    <string name="app_name">جداء</string>

    <string name="tables">الجداول</string>
    <string name="table_number">جدول رقم</string>
    <string name="review">مراجعة</string>
    <string name="save_mult_table">حفظ الجدول</string>
    <string name="solve_mut_table">حل الجدول</string>
    <string name="first_exam">الإختبار الأول</string>
    <string name="second_exam">الإختبار الثاني</string>
    <string name="third_exam">الإختبار الثالث</string>
    <string name="operation">حل العملية</string>
    <string name="count_points">النقاط</string>
    <string name="text_delete">مسح</string>
    <string name="text_result">النتيجة</string>
    <string name="final_exam">الإمتحان النهائي</string>
    <string name="text_exit">خروج</string>
    <string name="text_about">حول التطبيق</string>
    <string name="text_results">النتائج</string>
    <string name="text_learn">تعليم</string>
    <string name="text_settings">الإعدادات</string>
    <string name="name">الإسم</string>
    <string name="family">اللقب</string>
    <string name="male">ذكر</string>
    <string name="female">أنثى</string>
    <string name="title_certificate">شهادة نجاح</string>
    <string name="text_save">حفظ</string>

    <string name="text_certification_male1">هنيئا للتلميذ ---</string>
    <string name="text_certification_male2">لنجاحه في إمتحان جدول الضرب</string>
    <string name="text_certification_male3">بتقدير ### بالتوفيق للمزيد .</string>
    <string name="text_certification_female1">هنيئا للتلميذة ---</string>
    <string name="text_certification_female2">لنجاحها في إمتحان جدول الضرب</string>
    <string name="signature">Abdelouahed Medjoudja</string>

    <string name="not_found">لا توجد شهادات</string>
    <string name="send_email">إرسال إيميل</string>
    <string name="duration">المدة</string>
    <string name="ask_get_certificate">هل تريد إستخراج الشهادة</string>
    <string name="yes">نعم</string>
    <string name="no">لا</string>
    <string name="share_certificate">مشاركة الشهادة</string>
    <string name="count_questions">عدد الأسئلة</string>
    <string name="points">النقاط</string>
    <string name="result_excellent">أحسنت عمل ممتاز واصل على هذا المنوال</string>
    <string name="result_medium">عمل جيد يمكنك تحسين مهارتك أكثر بالتمرين</string>
    <string name="result_low">عمل ضعيف حاول التمرن أكثر لتصبح أفضل</string>
    <string name="excellent">ممتاز</string>
    <string name="medium">حسن</string>
    <string name="low">ضعيف</string>
    <string name="agree">موافق</string>
    <string name="alert_excellent">يجب الحصول على علامة ممتاز لإجتياز المرحلة</string>
    <string name="save_done">تم الحفظ</string>
    <string name="alert_steps_learn">يجب إكمال جميع مراحل التعليم</string>
    <string name="date">التاريخ :</string>
    <string name="directory">جداء</string>

    <string name="certifications">الشهادات</string>

    <string name="about1">تعلم جدول الضرب أصبح سهلا سريعا وممتعا مع تطبيق</string>
    <string name="about2">حيث يتوافر على العديد من الميزات التي تجعلك تستمتع وتتعلم في نفس الوقت من بينها :\nتعلم جدول الضرب خطوة بخطوة بطريقة سهلة وممتعة مع أصوات خاصة بالإجابة الصحيحة أوالخاطئة\nأيضا التطبيق يعطيك تقييما لمستواك خلال التعلم تقيم لكل الجداول معا وتقيم خاص لكل جدول\nكما يمكنك التطبيق من إجراء إمتحان مباشر لتحديد المستوى ويقوم بحفظ كل نتائجك مع التقييم والتاريخ وبالتالي يمكنك الرجوع لها في أي وقت للإطلاع عليها وملاحظة مراحل تطورك مع الوقت وبعد تجاوز الإمتحان يمكنك الحصول على شهادة تشجيعية باسمك الخاص</string>
    <string name="about3">راسلنا عبر الإيميل</string>
    <string name="desc_img_finish">finish_image</string>
    <string name="desc_img_tables">img_table</string>
    <string name="desc_avatar">avatar</string>
    <string name="table1">جدول رقم 1</string>
    <string name="table2">جدول رقم 2</string>
    <string name="table3">جدول رقم 3</string>
    <string name="table4">جدول رقم 4</string>
    <string name="table5">جدول رقم 5</string>
    <string name="table6">جدول رقم 6</string>
    <string name="table7">جدول رقم 7</string>
    <string name="table8">جدول رقم 8</string>
    <string name="table9">جدول رقم 9</string>
    <string name="slide11">التعليم الممتع</string>
    <string name="slide12">تعلم جدول الضرب بطريقة سهلة وممتعة مع تطبيق جداء وفق منهاج مدروس لتحقيق أكبر فائدة في أسرع وقت</string>
    <string name="desc_slide1">img_slide1</string>
    <string name="desc_slide2">img_slide2</string>
    <string name="slide21">شهادة نجاح</string>
    <string name="slide22">إجتز الإمتحان النهائي وأحصل على شهادة بإسمك الخاص</string>
    <string name="desc_slide3">img_slide3</string>
    <string name="start">لنبدأ</string>
    <string name="desc_slide4">img_slide4</string>
    <string name="desc_about">img_about</string>
    <string name="desc_certificate">img_certificate</string>
    <string name="share">مشاركة</string>
    <string name="desc_exam">img_exam</string>
    <string name="desc_home">img_home</string>
    <string name="desc_learn">img_learn</string>
    <string name="desc_levels">img_levels</string>
    <string name="desc_operation">img_operation</string>
    <string name="count_questions10">عدد الأسئلة 10</string>
    <string name="desc_results">img_results</string>
    <string name="desc_settings">img_settings</string>
    <string name="desc_table_levels">img_table_levels</string>
    <string name="desc_certificate_result">desc certificate result</string>
</resources>