<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:fitsSystemWindows="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context="com.ouahiddev.juda.ui.activities.SettingsActivity">

    <RelativeLayout style="@style/mToolBar">

        <ImageView
            style="@style/ImageView.ImageBack"
            android:contentDescription="@string/desc_settings"
            android:onClick="clickFinish" />

        <TextView
            style="@style/mTextToolBar"
            android:text="@string/text_settings" />

        <ImageView
            android:layout_width="@dimen/dimen_xxl"
            android:layout_height="@dimen/dimen_xxl"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_margin="@dimen/padding_m"
            android:contentDescription="@string/desc_settings"
            android:onClick="clickSave"
            android:padding="@dimen/padding_m"
            app:srcCompat="@drawable/ic_save" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="@dimen/margin_xxxl"
        android:layout_marginStart="@dimen/margin_xxxl"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/avatar_settings"
            android:layout_width="@dimen/dimen_avatar"
            android:layout_height="@dimen/dimen_avatar"
            android:layout_gravity="center"
            android:contentDescription="@string/desc_settings"
            app:srcCompat="@drawable/ic_boy" />

        <androidx.cardview.widget.CardView
            style="@style/mCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/text_gray"
            app:cardCornerRadius="@dimen/radius_m"
            app:cardElevation="0dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/margin_xxxl">

                <EditText
                    android:id="@+id/user_name_settings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_margin="@dimen/margin_m"
                    android:background="@drawable/background_text"
                    android:hint="@string/name"
                    android:inputType="textPersonName"
                    android:textColor="@color/text_white"
                    android:textColorHint="@color/text_hint"
                    android:textSize="@dimen/text_l" />

                <EditText
                    android:id="@+id/family_name_settings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/user_name_settings"
                    android:layout_margin="@dimen/margin_m"
                    android:background="@drawable/background_text"
                    android:hint="@string/family"
                    android:inputType="textPersonName"
                    android:textColor="@color/text_white"
                    android:textColorHint="@color/text_hint"
                    android:textSize="@dimen/text_l" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/family_name_settings"
                    android:layout_marginTop="@dimen/margin_l"
                    android:gravity="end">

                    <RadioButton
                        android:id="@+id/male_settings"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:button="@null"
                        android:checked="true"
                        android:drawableEnd="@android:drawable/btn_radio"
                        android:drawablePadding="@dimen/padding_l"
                        android:text="@string/male"
                        android:textColor="@color/text_black"
                        android:textSize="@dimen/text_l" />

                    <RadioButton
                        android:id="@+id/female_settings"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:button="@null"
                        android:drawableEnd="@android:drawable/btn_radio"
                        android:drawablePadding="@dimen/padding_l"
                        android:text="@string/female"
                        android:textColor="@color/text_black"
                        android:textSize="@dimen/text_l" />

                </RadioGroup>

            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

</RelativeLayout>
