<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:fitsSystemWindows="true"
    tools:context="com.academyatinfo.multtable.levels.Levels">

    <RelativeLayout
        android:id="@+id/toolBar_Levels"
        style="@style/mToolBar">

        <ImageView style="@style/ImageView.ImageBack" />

        <TextView
            android:id="@+id/name_table_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:layout_margin="@dimen/margin_textView"
            android:text="@string/table_number"
            android:textColor="@color/text_white"
            android:textSize="@dimen/text_large" />

        <TextView
            android:id="@+id/table_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="@dimen/margin_textView"
            android:layout_toLeftOf="@id/name_table_number"
            android:textColor="@color/text_white"
            android:textSize="@dimen/text_large" />
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolBar_Levels"
        android:gravity="center">

        <android.support.v7.widget.CardView
            android:id="@+id/layout_level_one"
            style="@style/CardView.Levels"
            android:onClick="level_one">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/result_one"
                    style="@style/ImageView.Lock"
                    android:layout_width="@dimen/dimen_ic_lock_levels"
                    android:layout_alignParentLeft="true"
                    android:padding="@dimen/padding_ic_lock"
                    android:src="@drawable/ic_check_false" />

                <TextView
                    style="@style/mTextViewLevels"
                    android:layout_toRightOf="@id/result_one"
                    android:text="@string/save_mult_table" />

            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/layout_level_two"
            style="@style/CardView.Levels"
            android:layout_below="@+id/layout_level_one"
            android:onClick="level_two">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/result_two"
                    style="@style/ImageView.Lock"
                    android:layout_width="@dimen/dimen_ic_lock_levels"
                    android:layout_alignParentLeft="true"
                    android:padding="@dimen/padding_ic_lock" />

                <TextView
                    style="@style/mTextViewLevels"
                    android:layout_toRightOf="@id/result_two"
                    android:text="@string/solve_mut_table" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/layout_level_three"
            style="@style/CardView.Levels"
            android:layout_below="@+id/layout_level_two"
            android:onClick="level_three">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/result_three"
                    style="@style/ImageView.Lock"
                    android:layout_width="@dimen/dimen_ic_lock_levels"
                    android:layout_alignParentLeft="true"
                    android:padding="@dimen/padding_ic_lock" />

                <TextView
                    style="@style/mTextViewLevels"
                    android:layout_toRightOf="@+id/result_three"
                    android:text="@string/first_exam" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/layout_level_four"
            style="@style/CardView.Levels"
            android:layout_below="@+id/layout_level_three"
            android:onClick="level_four">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/result_four"
                    style="@style/ImageView.Lock"
                    android:layout_width="@dimen/dimen_ic_lock_levels"
                    android:layout_alignParentLeft="true"
                    android:padding="@dimen/padding_ic_lock" />

                <TextView
                    style="@style/mTextViewLevels"
                    android:layout_toRightOf="@id/result_four"
                    android:text="@string/second_exam" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/layout_level_five"
            style="@style/CardView.Levels"
            android:layout_below="@+id/layout_level_four"
            android:onClick="level_five">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/result_five"
                    style="@style/ImageView.Lock"
                    android:layout_width="@dimen/dimen_ic_lock_levels"
                    android:layout_alignParentLeft="true"
                    android:padding="@dimen/padding_ic_lock" />

                <TextView
                    style="@style/mTextViewLevels"
                    android:layout_toRightOf="@id/result_five"
                    android:text="@string/third_exam" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            style="@style/CardView.Levels"
            android:layout_below="@+id/layout_level_five"
            app:cardBackgroundColor="@color/colorAccent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/img_review"
                    style="@style/ImageView.Lock"
                    android:layout_width="@dimen/dimen_ic_lock_levels"
                    android:layout_alignParentLeft="true"
                    android:padding="@dimen/padding_ic_lock" />

                <TextView
                    style="@style/mTextViewLevels"
                    android:layout_toRightOf="@+id/img_review"
                    android:onClick="review"
                    android:text="@string/review" />
            </RelativeLayout>

        </android.support.v7.widget.CardView>
    </RelativeLayout>
</RelativeLayout>
